--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -282,8 +282,8 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
             - --verbose
-          #  - --build-property
-          #  - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+            - --build-property
+            - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
