--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,7 +114,9 @@ jobs:
             - examples/LIN_master_RS485_HWSerial_Blk
           cli-compile-flags: |
             - --verbose
-          # for some reason, passing arguments doesn't work for SAMD -> skip
+          #  - --build-property
+          #  - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          # for some reason, passing arguments doesn't work for SAMD -> skip for now
 
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
@@ -282,8 +284,9 @@ jobs:
             - examples/LIN_master_SWSerial_Blk
           cli-compile-flags: |
             - --verbose
-            - --build-property
-            - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          #  - --build-property
+          #  - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          # for some reason, passing arguments doesn't work for ESP32 -> skip for now
             
       # upload test reports
       - uses: actions/upload-artifact@v4.4.3
