--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,6 +125,10 @@ jobs:
           path: ${{ env.SKETCHES_REPORTS_PATH }}
           name: sketches-report-${{ matrix.board.artifact-name-suffix }}
 
+      # debug step to print the build command
+      - name: Print build command
+        run: echo "arduino-cli compile --fqbn ${{ matrix.board.fqbn }} --build-property build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3"
+
 
 
   # Build for ESP8266
