--- a/.github/workflows/build_SAMD.yml
+++ b/.github/workflows/build_SAMD.yml
@@ -56,12 +56,10 @@ jobs:
             - examples/LIN_master_HWSerial_Blk
             - examples/LIN_master_RS485_HWSerial_Bkg
             - examples/LIN_master_RS485_HWSerial_Blk
-          cli-compile-flags: |
-            - --verbose
-            - --build-property
-            - build.extra_flags=-DLIN_MASTER_DEBUG_SERIAL=Serial
-          #  - build.extra_flags=-Wall  -> error
-          #  - build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          build-properties: |
+            build.extra_flags=-DLIN_MASTER_DEBUG_SERIAL=Serial
+          # build.extra_flags=-Wall  -> error
+          # build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
           # for some reason, passing arguments doesn't work for SAMD -> skip for now
 
       # upload test reports
