--- a/.github/workflows/build_SAMD.yml
+++ b/.github/workflows/build_SAMD.yml
@@ -50,13 +50,8 @@ jobs:
           libraries: |
             - source-path: ./
           sketch-paths: |
-            - examples/LIN_master_Dual_HWSerial_Bkg
-            - examples/LIN_master_HWSerial_Bkg
-            - examples/LIN_master_HWSerial_Bkg_Evt
             - examples/LIN_master_HWSerial_Blk
-            - examples/LIN_master_RS485_HWSerial_Bkg
-            - examples/LIN_master_RS485_HWSerial_Blk
           cli-compile-flags: |
             - --verbose
-          build-properties: |
-            build.extra_flags=-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3
+          extra-flag: |
+            -DLIN_MASTER_DEBUG_SERIAL=Serial
