--- a/.github/workflows/build_SAMD.yml
+++ b/.github/workflows/build_SAMD.yml
@@ -36,13 +36,23 @@ jobs:
       # check-out this repository
       - uses: actions/checkout@v4.2.2
 
-      # build Arduino examples
-      - name: Install Arduino CLI
+      # Install Arduino CLI
+      - name: install Arduino CLI
         run: |
           curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | sh
+          export PATH="$PWD/bin:$PATH"
+          echo "PATH=$PATH"
+          which arduino-cli
+          arduino-cli version
+
+      # Install required boards & libraries
+      - name: install ESP8266 core
+        run: |
+          export PATH="$PWD/bin:$PATH"
           arduino-cli core update-index
           arduino-cli core install arduino:sam
 
+      # build Arduino examples
       - name: Compile sketches
         run: |
           arduino-cli compile --fqbn arduino:sam:arduino_due_x_dbg --build-property build.extra_flags="-DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3" examples/LIN_master_HWSerial_Blk
