--- a/.github/workflows/build_SAMD.yml
+++ b/.github/workflows/build_SAMD.yml
@@ -45,8 +45,20 @@ jobs:
           which arduino-cli
           arduino-cli version
 
+      # Create Board Manager file
+      - name: create arduino-cli.yaml
+        run: |
+          mkdir -p ~/.arduino15
+          echo "directory: ~/.arduino15" > ~/.arduino15/arduino-cli.yaml
+          echo "board_manager:" >> ~/.arduino15/arduino-cli.yaml
+          echo "  additional_urls:" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://adafruit.github.io/arduino-board-index/package_adafruit_index.json" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://arduino.esp8266.com/stable/package_esp8266com_index.json" >> ~/.arduino15/arduino-cli.yaml
+          echo "    - https://espressif.github.io/arduino-esp32/package_esp32_index.json" >> ~/.arduino15/arduino-cli.yaml
+          cat ~/.arduino15/arduino-cli.yaml
+      
       # Install required boards & libraries
-      - name: install ESP8266 core
+      - name: install SAMD core
         run: |
           export PATH="$PWD/bin:$PATH"
           arduino-cli core update-index
