--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -114,8 +114,7 @@ jobs:
             - examples/LIN_master_RS485_HWSerial_Blk
           cli-compile-flags: |
             - --verbose
-            - --build-property
-            - compiler.cpp.extra_flags="-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3"
+            - --build-property compiler.cpp.extra_flags="-Wall -DLIN_MASTER_DEBUG_SERIAL=Serial -DLIN_MASTER_DEBUG_LEVEL=3"
           # for some reason, passing arguments doesn't work for SAMD -> skip for now
 
       # upload test reports
