--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -93,7 +93,8 @@ jobs:
           )
 
           # misc build flags
-          MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          #MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          MISC_FLAGS="-Wall -Wextra"
 
           # loop over sketches
           for ITEM_SKETCHES_FLAGS in "${SKETCHES_FLAGS[@]}"; do
@@ -156,7 +157,8 @@ jobs:
           )
 
           # misc build flags
-          MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          #MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          MISC_FLAGS="-Wall -Wextra"
 
           # loop over sketches
           for ITEM_SKETCHES_FLAGS in "${SKETCHES_FLAGS[@]}"; do
@@ -285,7 +287,8 @@ jobs:
           )
 
           # misc build flags
-          MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          #MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          MISC_FLAGS="-Wall -Wextra"
 
           # loop over sketches
           for ITEM_SKETCHES_FLAGS in "${SKETCHES_FLAGS[@]}"; do
@@ -343,7 +346,8 @@ jobs:
           )
 
           # misc build flags
-          MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          #MISC_FLAGS="-Wall -Wextra -Wpedantic"
+          MISC_FLAGS="-Wall -Wextra"
 
           # loop over sketches
           for ITEM_SKETCHES_FLAGS in "${SKETCHES_FLAGS[@]}"; do
