--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=LIN master portable
-version=1.7
+version=1.8
 author=Georg Icking-Konert
 maintainer=Georg Icking-Konert (gicking)
 sentence=LIN master node emulation for different boards
@@ -7,3 +7,4 @@ paragraph=LIN master node emulation. This libary supports several Serial interfa
 category=Communication
 url=https://github.com/gicking/LIN_master_portable_Arduino
 architectures=*
+depends=NeoHWSerial, EspSoftwareSerial
