--- a/.github/workflows/build_examples.yml
+++ b/.github/workflows/build_examples.yml
@@ -521,7 +521,8 @@ jobs:
 
           # misc build flags
           #MISC_FLAGS="-Wall -Wextra -DENABLE_HWSERIAL1 -Wpedantic"
-          MISC_FLAGS="-Wall -Wextra -DENABLE_HWSERIAL1"
+          #MISC_FLAGS="-Wall -Wextra -DENABLE_HWSERIAL1"
+          MISC_FLAGS="-Wall -Wextra"
 
           # loop over sketches
           for ITEM_SKETCHES_FLAGS in "${SKETCHES_FLAGS[@]}"; do
